@@ -6,6 +6,8 @@ software-center (3.1.2) UNRELEASED; urgency=low
     use test/data/fake-applications.menu in the test_where_is_it.py
     that points to  <LegacyDir>/usr/share/app-install/desktop</LegacyDir>
     to ensure the "where-is-it" tests work on all machines
+  * test/test_appdetails_view.py:
+    - add better message on missing python-mock
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 19 Nov 2010 09:14:40 +0100
 
